labviewdir = $(prefix)/LabView
dist_labview_DATA = \
	MdsClose.vi \
	MdsConnect.vi \
	MdsDescrInt1D.vi \
	MdsDescrInt2D.vi \
	MdsDescrInt.vi \
	MdsDescrSingle1D.vi \
	MdsDescrSingle.vi \
	MdsDescrStr.vi \
	MdsDisconnect.vi \
	MdsGetInt1D.vi \
	MdsGetInt.vi \
	MdsGetSingle1D.vi \
	MdsGetSingle.vi \
	MdsGetStr.vi \
	MdsOpen.vi \
	MdsPut.vi \
	MdsSetEvent.vi \
	MdsWaitForEvent.vi \
	Sample1-GetInt.vi \
	Sample2-PutInt.vi \
	Sample3-PutArray.vi \
	Sample4-PutSignal.vi \
	Sample5-GetSngArray.vi \
	Sample6-GetPutWithEvents.vi \
	Sample7-Put2DArray.vi
